# GA4_API_Connector

./: .env.example  .gitignore  README.md  pyproject.toml  test_mcs_ws_ga4_report.xlsx
examples/: example_reports.py  test_ga4_report.py
ga4_connector/: __init__.py  connector.py  reporter.py
tests/: test_connector.py
