[project]
name = "ga4-api-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "Zohreh Kazemianpour",email = "zohreh.kazemianpour@mcsaatchiws.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (<49)",
    "google-analytics-data (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
