[project]
name = "ga4-api-connector"
version = "0.1.0"
description = ""
authors = [
    {name = "Zohreh Kazemianpour",email = "zohreh.kazemianpour@mcsaatchiws.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (<49)",
    "google-analytics-data (>=0.23.0,<0.24.0)",
    "pandas (>=3.0.4,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "google-api-core (>=2.31.0,<3.0.0)",
    "google-auth (>=2.55.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
